# Rust-Example-Actix

./: Cargo.toml  README.md
migrations/2024-02-25-232131_create_tweets/: down.sql  up.sql
migrations/2024-02-25-232355_create_likes/: up.sql
src/: likes.rs  main.rs  tweets.rs
