[package]
name = "api-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
actix-web = "4"
diesel = { version = "2.1.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"]}
